update sec5 img and fix cta button z-index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -477,6 +477,7 @@ section {
 		font-weight: 500;
 		color: #fff;
 		position: fixed;
+		z-index: 9999;
 		left: 0;
 		bottom: 15vh;
 		background-image: linear-gradient(114deg, #47dd84 8%, #4babf9 51%, #a164f2 92%);
